Clean up code to use modern java api